--- a/splitwise/.gitignore
+++ b/splitwise/.gitignore
@@ -1,5 +1,7 @@
 HELP.md
 target/
+.mvn/
+mvnw
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -18,6 +20,7 @@ target/
 *.iws
 *.iml
 *.ipr
+*.cmd
 
 ### NetBeans ###
 /nbproject/private/
